--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -16,7 +16,7 @@
 "seed_prhase" = "Seed phrase";
 "input_seed" = "Type in your seed phrase";
 "confirm_seed_text" = "To ensure the seed phrase is written down correctly, please fill in the specific words below";
-"display_seed" = "Your seed phrase is the access key to all the funds in your wallet. From now on you won’t be able to see your seed phrase in settings. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase you will not be able to recover your money.";
+"display_seed" = "Your seed phrase is the access key to all the funds in your wallet. After successful verification, you won’t be able to see your seed phrase in settings. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase you will not be able to recover your money.";
 "display_seed_old" = "Your seed phrase is the access key to all the funds in your wallet. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase you will not be able to recover your money.";
 "intro_seed_main" = "Create a new wallet by generating a seed phrase. If you lose your device, you will need the seed phrase to recover your funds. Never type your seed phrase in keychains or password managers. Never save it in your local filesystem or remote folders of any kind.";
 "intro_seed_1" = "Do not let anyone see your seed phrase";
@@ -500,3 +500,6 @@
 "block_height" = "block height";
 "dark_mode" = "Dark mode";
 "delete_all_tags" = "Delete all tags";
+"faucet_address_alert" = "Your address will be filled-in automatically on the faucet webpage";
+"seed_verification" = "Seed verification";
+"complete_seed_verification" = "Complete seed verification";
