--- a/Resources/fr.lproj/Localizable.strings
+++ b/Resources/fr.lproj/Localizable.strings
@@ -16,7 +16,7 @@
 "seed_prhase" = "Phrase clé";
 "input_seed" = "Saisir votre phrase clé";
 "confirm_seed_text" = "Pour vous assurer que la phrase-clé est bien écrite, veuillez compléter les mots ci-dessous";
-"display_seed" = "Your seed phrase is the access key to all the funds in your wallet. From now on you won’t be able to see your seed phrase in settings. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase you will not be able to recover your money.";
+"display_seed" = "Your seed phrase is the access key to all the funds in your wallet. After successful verification, you won’t be able to see your seed phrase in settings. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase you will not be able to recover your money.";
 "display_seed_old" = "Votre phrase clé est le moyen d'accéder à toutes les monnaies cryptées de votre portefeuille. Ecrivez la phrase pour la garder dans un coffre-fort ou dans un coffre-fort verrouillé. Sans cette phrase, vous ne pourrez pas récupérer votre argent.";
 "intro_seed_main" = "Créer un nouveau portefeuille en générant une phrase clé.\nSi vous perdez votre appareil,\nvous aurez besoin de cette phrase pour récupérer votre portefeuille! Merci de ne jamais sauvegarder cette phrase clé via un trousseau ou un manager de mot de passe. Ne l'enregistrez jamais dans vos dossiers locaux ou distants, sous quelque forme que ce soit.";
 "intro_seed_1" = "Ne laissez personne voir votre phrase clé";
