--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -505,3 +505,5 @@
 "complete_seed_verification" = "Complete seed verification";
 "faucet_redirect_text" = "Redirecting to the faucet website.\nYour address will be filled-in automatically.";
 "clear_wallet_transactions_text" = "Unable to delete wallet with active transactions";
+"show_amounts_in" = "Show amounts in";
+"second_currency" = "Secondary currency";
