--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -507,3 +507,29 @@
 "clear_wallet_transactions_text" = "Unable to delete wallet with active transactions";
 "show_amounts_in" = "Show amounts in";
 "second_currency" = "Secondary currency";
+"notifications" = "Notifications";
+"news" = "News";
+"address_expiration" = "Address expiration";
+"transaction_status" = "Transaction status";
+"wallet_updates" = "Wallet updates";
+"new_notifications_title" = "You have new notifications";
+"new_notifications_text" = "Please click to open details";
+"transaction" = "Transaction";
+"transaction_received_notif_body" = "You received (value) BEAM from (address)";
+"transaction_sent_notif_body" = "You sent (value) BEAM to (address)";
+"address_expired_notif" = "1 address expired";
+"addresses_expired_notif" = "(count) addresses expired";
+"clear_all" = "Clear all";
+"address_expired" = "Address expired";
+"transaction_received" = "Transaction received";
+"transaction_received_notif_body_failed" = "Receiving (value) BEAM from (address) failed";
+"transaction_sent_notif_body_failed" = "Sending (value) BEAM to (address) failed";
+"transaction_sent" = "Transaction sent";
+"read" = "Read";
+"no_notifications" = "There are no notifications yet.";
+"new_version_available_title" = "New version (version) is avalable";
+"new_version_available_detail" = "Your current version is (version)\nPlease update to get the most of your Beam wallet.";
+"new_version_available_notif_title" = "New version is avalable";
+"new_version_available_notif_detail" = "Please update to get the most of your Beam wallet.";
+"notification" = "Notification";
+"update_now" = "Update now";
