--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -502,7 +502,7 @@ and never kept on the blockchain.";
 "delete_all_tags" = "Delete all tags";
 "faucet_address_alert" = "Your address will be filled-in automatically on the faucet webpage";
 "seed_verification" = "Seed verification";
-"complete_seed_verification" = "Complete seed verification";
+"complete_seed_verification" = "Verify seed phrase";
 "faucet_redirect_text" = "Redirecting to the faucet website.\nYour address will be filled-in automatically.";
 "clear_wallet_transactions_text" = "Unable to delete wallet with active transactions";
 "show_amounts_in" = "Show amounts in";
@@ -548,3 +548,4 @@ and never kept on the blockchain.";
 "change_locked" = "CHANGE (will be locked till the transaction will succeed or expire)";
 "unlinked_funds_only" = "Unlinked funds only";
 "add_all_unlinked" = "Add all unlinked";
+"wallet_id" = "Wallet ID";
