--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "restore_wallet_info" = "You are trying to restore an existing Beam Wallet. Please notice that if you use your wallet on another device, your balance will be up to date, but transaction history and addresses will be kept separately on each device.";
 "no_space_title" = "Not enough storage";
 "no_space_info" = "At least 200MB of free space is required on the device to restore the wallet";
-"beam_title" = "Scalable confidential cryptocurrency";
+"beam_title" = "Confidential, fast, easy to use";
 "create_new_wallet" = "Create new wallet";
 "enter_password_title" = "Enter your password to access the wallet";
 "empty_password" = "Password can not be empty";
@@ -120,7 +120,7 @@ and never kept on the blockchain.";
 "delete_address" = "Delete address";
 "delete_address_transaction" = "Delete address and related transactions";
 "delete_address_only" = "Delete address only";
-"delete_address_text" = "Are you sure you want to delete this address from your wallet?";
+"delete_address_text" = "Are you sure you want to delete this token from your wallet?";
 "delete_contact_text" = "Are you sure you want to delete this contact from your wallet?";
 "category" = "Tag";
 "in_24_hours" = "In 24 hours";
@@ -208,7 +208,7 @@ and never kept on the blockchain.";
 "send" = "Send";
 "paste_enter_address" = "Paste address or choose contact";
 "incorrect_address" = "Incorrect address";
-"request_amount" = "Request amount (optional)";
+"request_amount" = "Amount (optional)";
 "address_is_expired" = "Can't send to the expired address";
 "groth" = " GROTH";
 "ownerkey_faceid_confirm" = "Please use Face ID to finish verification";
@@ -302,7 +302,7 @@ and never kept on the blockchain.";
 "total_available" = "Total available";
 "send_all" = "Send all";
 "send_address_secure" = "Send this address to the sender over an external secure channel.";
-"share_address" = "Share address";
+"share_address" = "Share token";
 "show_qr" = "Show QR";
 "share_qr" = "Share QR";
 "requested_amount" = "Requested amount";
@@ -549,3 +549,11 @@ and never kept on the blockchain.";
 "unlinked_funds_only" = "Unlinked funds only";
 "add_all_unlinked" = "Add all unlinked";
 "wallet_id" = "Wallet ID";
+"show_token" = "Show token";
+"transaction_token" = "Transaction token";
+"general" = "General";
+"one_time" = "One-time use";
+"permanent" = "Permanent";
+"edit_token" = "Edit token";
+"receive_from" = "Receive from";
+"pool" = "Exchange or mining pool";
