--- a/Resources/cs.lproj/LaunchScreenMasterNet.strings
+++ b/Resources/cs.lproj/LaunchScreenMasterNet.strings
@@ -1,3 +1,3 @@
 
-/* Class = "UILabel"; text = "Scalable confidential cryptocurrency"; ObjectID = "fyw-0i-IbL"; */
-"fyw-0i-IbL.text" = "Scalable confidential cryptocurrency";
+/* Class = "UILabel"; text = "Confidential, fast, easy to use"; ObjectID = "fyw-0i-IbL"; */
+"fyw-0i-IbL.text" = "Confidential, fast, easy to use";
