--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 "restore_wallet_title" = "Restore wallet";
-"restore_wallet_info" = "You are trying to restore an existing Beam Wallet. Please notice that if you use your wallet on another device, your balance will be up to date, but transaction history and addresses will be kept separately on each device.";
+"restore_wallet_info" = "You are trying to restore an existing Beam Wallet. Please notice that if you use your wallet on another device, your balance will be up to date, but transaction history and tokens will be kept separately on each device.";
 "no_space_title" = "Not enough storage";
 "no_space_info" = "At least 200MB of free space is required on the device to restore the wallet";
 "beam_title" = "Confidential, fast, easy to use";
@@ -61,8 +61,8 @@ and never kept on the blockchain.";
 "receiving" = "Receiving";
 "sending" = "Sending";
 "maturing" = "Maturing";
-"sending_address" = "Sending address";
-"receiving_address" = "Receiving address";
+"sending_address" = "Sending token";
+"receiving_address" = "Receiving token";
 "transaction_fee" = "Transaction fee";
 "transaction_id" = "Transaction ID";
 "kernel_id" = "Kernel ID";
@@ -100,7 +100,7 @@ and never kept on the blockchain.";
 "external_link_title" = "External link";
 "external_link_text" = "Beam Wallet app requires permission to open external link in the browser. This action will expose your IP to the web server. To avoid it, choose \"Cancel\". You can change your choice in app setting anytime.";
 "open" = "Open";
-"addresses" = "Addresses";
+"addresses" = "Tokens";
 "utxo" = "UTXO";
 "settings" = "Settings";
 "details" = "Details";
@@ -116,20 +116,20 @@ and never kept on the blockchain.";
 "exp_date" = "Expiration date";
 "annotation" = "Annotation";
 "show_qr_code" = "Show QR code";
-"copy_address" = "Copy address";
+"copy_address" = "Copy token";
 "edit_address" = "Edit token";
-"delete_address" = "Delete address";
-"delete_address_transaction" = "Delete address and related transactions";
-"delete_address_only" = "Delete address only";
+"delete_address" = "Delete token";
+"delete_address_transaction" = "Delete tokens and related transactions";
+"delete_address_only" = "Delete token only";
 "delete_address_text" = "Are you sure you want to delete this token from your wallet?";
 "delete_contact_text" = "Are you sure you want to delete this contact from your wallet?";
 "category" = "Tag";
 "in_24_hours" = "In 24 hours";
 "never" = "Never";
-"address_expires" = "Address expires";
+"address_expires" = "Token expires";
 "save" = "Save";
-"active_address" = "Activate address";
-"expire_now" = "Expire address now";
+"active_address" = "Activate token";
+"expire_now" = "Expire token now";
 "open_settings" = "Open Settings";
 "camera_denied_text" = "It looks like your privacy settings are preventing us from accessing your camera to do qr code scanning. You can fix this by doing the following:\n\n1. Touch the Go button below to open the Settings app.\n\n2. Turn the Camera on.\n\n3. Open this app and try again.";
 "camera_restricted" = "You've been restricted from using the camera on this device. Without camera access this feature won't work. Please contact the device owner so they can give you access";
@@ -138,7 +138,7 @@ and never kept on the blockchain.";
 "scan_tg_qr_code" = "Scan telegram QR code";
 "receive" = "Receive";
 "hours_24" = "24 hours";
-"delete_all_addresses" = "Delete all addresses";
+"delete_all_addresses" = "Delete all tokens";
 "delete_all_contacts" = "Delete all contacts";
 "delete_all_transactions" = "Delete all transactions";
 "clear" = "Clear";
@@ -164,15 +164,15 @@ and never kept on the blockchain.";
 "tg_bot_link" = "Please open wallet to link telegram bot";
 "share_qr_code" = "Share QR code";
 "qr_code" = "QR code";
-"create_address" = "create address";
-"new_address" = "New address";
+"create_address" = "Create token";
+"new_address" = "New token";
 "new_category" = "Create tag";
 "edit_category" = "Edit tag";
 "category_name" = "Tag name";
 "category_exist" = "This tag already exists";
 "edit" = "Edit";
 "delete" = "Delete";
-"no_category_addresses" = "There are no addresses associated with this tag";
+"no_category_addresses" = "There are no tokens associated with this tag";
 "no_category_contacts" = "There are no contacts associated with this tag";
 "delete_category" = "Delete tag";
 "beams_send" = "Beams sent";
@@ -187,7 +187,7 @@ and never kept on the blockchain.";
 "cancel_transaction_text" = "Are you sure you want to cancel\nthis transaction?";
 "yes" = "Yes";
 "no" = "No";
-"address_deleted" = "Address deleted";
+"address_deleted" = "Token deleted";
 "contact_deleted" = "Contact deleted";
 "show_owner_key" = "Show owner key";
 "ownerkey_touchid_text" = "Enter your password and use Touch ID\nto access the wallet";
@@ -200,17 +200,17 @@ and never kept on the blockchain.";
 "advanced" = "Advanced";
 "expires" = "Expires";
 "none" = "None";
-"change_address" = "Change address";
-"auto_address" = "Address (auto-generated)";
-"existing_addresses" = "Existing addresses";
-"address_search" = "Search by address, tag or name";
+"change_address" = "Change token";
+"auto_address" = "Token (auto-generated)";
+"existing_addresses" = "Existing tokens";
+"address_search" = "Search by token, tag or name";
 "not_found" = "Nothing found";
 "touch_id_ownerkey_verefication" = "Use fingerprint to finish verification and get access to owner key";
 "send" = "Send";
-"paste_enter_address" = "Paste address or choose contact";
-"incorrect_address" = "Incorrect address";
+"paste_enter_address" = "Paste token or choose contact";
+"incorrect_address" = "Incorrect token";
 "request_amount" = "Amount (optional)";
-"address_is_expired" = "Can't send to the expired address";
+"address_is_expired" = "Can't send to the expired token";
 "groth" = " GROTH";
 "ownerkey_faceid_confirm" = "Please use Face ID to finish verification";
 "ownerkey_touchid_confirm" = "Please use Touch ID to finish verification";
@@ -220,12 +220,12 @@ and never kept on the blockchain.";
 "amount_to_send" = "Amount to send";
 "total_utxo" = "Total UTXO value";
 "send_notice" = "For the transaction to complete, the recipient must get online within the next 12 hours and you should get online within 2 hours afterwards";
-"save_address_title" = "Save address";
+"save_address_title" = "Save token";
 "save_contact_title" = "Save contact";
-"save_contact_text" = "Would you like to save recipient address for futher transactions?";
-"save_address_text" = "Would you like to save created address and use it later?";
+"save_contact_text" = "Would you like to save recipient token for futher transactions?";
+"save_address_text" = "Would you like to save created token and use it later?";
 "not_save" = "Don’t save";
-"address_copied" = "Address copied to clipboard";
+"address_copied" = "Token copied to clipboard";
 "copy" = "Copy";
 "edit_contact" = "Edit contact";
 "delete_contact" = "Delete contact";
@@ -254,29 +254,29 @@ and never kept on the blockchain.";
 "search" = "Search";
 "autogenerated" = "autogenerated";
 "click_receive_beam" = "Click to receive Beam";
-"save_edit_address_text" = "Would you like to save changes in this address?";
+"save_edit_address_text" = "Would you like to save changes in this token?";
 "receive_notice" = "For the transaction to complete, you should get online during the 12 hours after Beams are sent.";
 "save_changes" = "Save changes";
-"my_rec_address" = "My receiving address";
-"my_send_address" = "My sending address";
-"my_address" = "My address";
+"my_rec_address" = "My receiving token";
+"my_send_address" = "My sending token";
+"my_address" = "My token";
 "no_name" = "No name";
 "buy_beam" = "Buy BEAM";
 "you_send" = "You send";
 "you_get" = "You will get";
-"recipient_address" = "recipient address";
-"refund_address" = "refund address";
+"recipient_address" = "recipient token";
+"refund_address" = "refund token";
 "min_amount" = "Minimum amount is";
 "beam_to_receive" = "Beam to receive";
 "beam_recepient_auto" = "Beam recipient token (autogenerated)";
-"beam_recepient" = "Beam recipient address";
+"beam_recepient" = "Beam recipient token";
 "start_transaction" = "Start transaction";
 "star_transaction_notice" = "By clicking \"Start transaction\" you accept\nCryptoWolf Terms of Use & Conditions";
 "terms_of_use" = "Terms of Use & Conditions";
 "incorrect_amount" = "Amount must be greater than or equal to the minimum amount";
 "min_amount_loading" = "Minimum amount is loading...";
 "create_categories_in_settings" = "You can create more tags in Settings.";
-"my_addresses" = "My addresses";
+"my_addresses" = "My tokens";
 "wrong_requested_amount_title" = "Wrong requested amount";
 "wrong_requested_amount_text" = "Requested amount coudn’t be 0 BEAM. Please enter correct amount.";
 "enter_amount_in_currency" = "Enter amount in";
@@ -302,7 +302,7 @@ and never kept on the blockchain.";
 "waiting_for_receiver" = "Waiting for receiver";
 "total_available" = "Total available";
 "send_all" = "Send all";
-"send_address_secure" = "Send this address to the sender over an external secure channel.";
+"send_address_secure" = "Send this token to the sender over an external secure channel.";
 "share_address" = "Share token";
 "show_qr" = "Show QR";
 "share_qr" = "Share QR";
@@ -319,7 +319,7 @@ and never kept on the blockchain.";
 "delete_all_text" = "Are you sure you want to delete all (str) from your device?";
 "delete_category_text" =  "Are you sure you want to delete “(str)” tag?";
 "canot_connect_node" = "Cannot connect to node";
-"buy_beam_value" = "Send (value) to the above (name) address to complete the transaction"; //example Send 1 BTC to the above BITCOIN address to complete the transaction
+"buy_beam_value" = "Send (value) to the above (name) token to complete the transaction"; //example Send 1 BTC to the above BITCOIN address to complete the transaction
 "scan_receiver_qr_code" = "Scan receiver QR code";
 "owner_key_warning" = "Deploying the owner key at a trusted node will allow the node to monitor all UTXO sent to any wallet generated from the same seed phrase.\n\nDon't share your Owner Key with others - it allows inspection and monitoring of your funds."; // \n\n - new line. please don't remove this symbols.
 "key_code" = "Key code";
@@ -337,7 +337,7 @@ and never kept on the blockchain.";
 "tx_status_invalid_kernel" = "Invalid kernel proof provided";
 "tx_status_params" = "Failed to send tx parameters";
 "tx_status_no_inputs" = "No inputs";
-"tx_status_expired_address" = "Address is expired";
+"tx_status_expired_address" = "Token is expired";
 "tx_status_failed_parameter" = "Failed to get parameter";
 "tx_status_expired" = "Transaction has expired";
 "tx_status_not_signed" = "Payment not signed by the receiver";
@@ -354,12 +354,12 @@ and never kept on the blockchain.";
 "not_shared" = "Won’t be shared";
 "language" = "Language";
 "optional" = "Optional";
-"invalid_address_title" = "Invalid address";
-"invalid_address_text" = "The provided node address is invalid. Please, check if the entered address is correct";
+"invalid_address_title" = "Invalid token";
+"invalid_address_text" = "The provided node token is invalid. Please, check if the entered address is correct";
 "insufficient_funds" = "Insufficient funds: you would need (value) beams to complete the transaction";
 "downloading" = "Downloaded";
-"sent_to_own" = "Sent to own address";
-"sending_to_own" = "Sending to own address";
+"sent_to_own" = "Sent to own token";
+"sending_to_own" = "Sending to own token";
 "default" = "Default";
 "my_active" = "My active"; //addresses
 "my_expired" = "My expired"; //addresses
@@ -377,12 +377,12 @@ and never kept on the blockchain.";
 "auth_touch_confirm" = "Confirm your fingerprint to authenticate";
 "auth_bio_failed" = "(Mechanism) has been locked out due to few fail attemp. Enter iPhone passcode to enable (Mechanism)."; //(Mechanism) is Face ID or Touch ID.
 "add_all" = "Add all";
-"my_active_addresses" = "My active addresses";
+"my_active_addresses" = "My active tokens";
 "tag" = "Tag";
 "contacts_empty" = "Your contacts list is empty";
-"addresses_empty" = "Your addresses list is empty";
-"addresses_empty_active" = "You have no active addresses";
-"addresses_empty_expired" = "You have no expired addresses";
+"addresses_empty" = "Your tokens list is empty";
+"addresses_empty_active" = "You have no active tokens";
+"addresses_empty_expired" = "You have no expired tokens";
 "utxo_empty" = "Your UTXO list is empty";
 "utxo_empty_progress" = "You have no active UTXO";
 "transactions_empty" = "Your transaction list is empty";
@@ -399,8 +399,8 @@ and never kept on the blockchain.";
 "click_to_receive" = "Click to receive Beam";
 "album" = "Album";
 "add_contact" = "Add contact";
-"address_already_exist_1" = "This address already exists";
-"address_already_exist_2" = "You can't save your address.\nThis address already exists";
+"address_already_exist_1" = "This token already exists";
+"address_already_exist_2" = "You can't save your token.\nThis token already exists";
 "confirm_transaction_1" = "Use Touch ID or enter your password to confirm transaction";
 "confirm_transaction_2" = "Use Face ID or enter your password to confirm transaction";
 "confirm_transaction_3" = "Enter your password to confirm transaction";
@@ -419,10 +419,10 @@ and never kept on the blockchain.";
 "NSPhotoLibraryUsageDescription" = "Provide gallery access to select QR code";
 "NSFaceIDUsageDescription" = "This app requires Face ID permission to authenticate using Face recognition";
 "NSCameraUsageDescription" = "The camera is needed to scan QR codes";
-"search_transactions" = "Search by transaction or kernel ID, comment, address or contact";
+"search_transactions" = "Search by transaction or kernel ID, comment, token or contact";
 "random_node" = "Connect to random node";
 "restore_create_title" = "Restore wallet or create new one";
-"restore_create_text" = "If you'll restore a wallet all transaction history and addresses will be lost.";
+"restore_create_text" = "If you'll restore a wallet all transaction history and tokens will be lost.";
 "proceed" = "Proceed";
 "info_restore_title" = "Do not simultaneously run two wallets initiated from the same seed phrase";
 "info_restore_text" = "If you run two wallets with the same seed, their balances will not be synchronized. To keep the balances in sync, use your own trusted node configured with your owner key. Also note that transaction history is not sycnrhonized between wallets in any case.";
@@ -501,16 +501,16 @@ and never kept on the blockchain.";
 "block_height" = "block height";
 "dark_mode" = "Dark mode";
 "delete_all_tags" = "Delete all tags";
-"faucet_address_alert" = "Your address will be filled-in automatically on the faucet webpage";
+"faucet_address_alert" = "Your token will be filled-in automatically on the faucet webpage";
 "seed_verification" = "Seed verification";
 "complete_seed_verification" = "Verify seed phrase";
-"faucet_redirect_text" = "Redirecting to the faucet website.\nYour address will be filled-in automatically.";
+"faucet_redirect_text" = "Redirecting to the faucet website.\nYour token will be filled-in automatically.";
 "clear_wallet_transactions_text" = "Unable to delete wallet with active transactions";
 "show_amounts_in" = "Show amounts in";
 "second_currency" = "Secondary currency";
 "notifications" = "Notifications";
 "news" = "News";
-"address_expiration" = "Address expiration";
+"address_expiration" = "Token expiration";
 "transaction_status" = "Transaction status";
 "wallet_updates" = "Wallet updates";
 "new_notifications_title" = "You have new notifications";
@@ -519,10 +519,10 @@ and never kept on the blockchain.";
 "transaction_received_notif_body" = "You received (value) BEAM from (address)";
 "transaction_receiving_notif_body" = "You receiving (value) BEAM from (address)";
 "transaction_sent_notif_body" = "You sent (value) BEAM to (address)";
-"address_expired_notif" = "1 address expired";
-"addresses_expired_notif" = "(count) addresses expired";
+"address_expired_notif" = "1 token expired";
+"addresses_expired_notif" = "(count) tokens expired";
 "clear_all" = "Clear all";
-"address_expired" = "Address expired";
+"address_expired" = "Token expired";
 "transaction_received" = "Transaction received";
 "transaction_received_notif_body_failed" = "Receiving (value) BEAM from (address) failed";
 "transaction_sent_notif_body_failed" = "Sending (value) BEAM to (address) failed";
@@ -568,8 +568,8 @@ and never kept on the blockchain.";
 "offline_transaction" = "Offline transaction";
 "transaction_type" = "Transaction type";
 "type" = "Type";
-"perm_out_address_title" = "Permanent outgoing address";
-"perm_out_address_text" = "This address will be used for sending to specific receiver token.";
+"perm_out_address_title" = "Permanent outgoing token";
+"perm_out_address_text" = "This token will be used for sending to specific receiver token.";
 "perm_token" = "Permanent token.";
 "token_type" = "Token type";
 "identity" = "Identity";
@@ -585,9 +585,9 @@ the min transaction fee will be 1200000 GROTH.\n\nFor the transaction to complet
 "switch_to_permanent" = "Switch to permanent";
 "switch_to_regular" = "Switch to regular";
 "one_time_expire_text" = "One-time use token (expire in 2 hours after succesfull transaction).";
-"address_not_supported_max_privacy" = "This type of address does not support max privacy transactions";
+"address_not_supported_max_privacy" = "This type of token does not support max privacy transactions";
 "offline_transactions" = "Offline transactions";
-"cant_sent_max_to_my_address" = "Can not sent max privacy transaction to own address";
+"cant_sent_max_to_my_address" = "Can not sent max privacy transaction to own token";
 "withdraw" = "Withdraw";
 "withdraw_cofirm" = "Please confirm the withdrawal.\nStay online until funds arrive.";
 "confirm_2" = "Confirm";
