--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -188,6 +188,7 @@ and never kept on the blockchain.";
 "yes" = "Yes";
 "no" = "No";
 "address_deleted" = "Address deleted";
+"address_details" = "Address details";
 "contact_deleted" = "Contact deleted";
 "show_owner_key" = "Show owner key";
 "ownerkey_touchid_text" = "Enter your password and use Touch ID\nto access the wallet";
@@ -547,7 +548,7 @@ and never kept on the blockchain.";
 "change" = "Change";
 "unlinked" = "Unlinked";
 "unlink_beam" = "Unlink BEAM";
-"change_locked" = "CHANGE (will be locked till the transaction will succeed or expire)";
+"change_locked" = "CHANGE\n(locked till the transaction will succeed or expire)";
 "unlinked_funds_only" = "Unlinked funds only";
 "add_all_unlinked" = "Add all unlinked";
 "wallet_id" = "Identity";
@@ -560,7 +561,6 @@ and never kept on the blockchain.";
 "receive_from" = "Receive from";
 "pool" = "Exchange or mining pool";
 "reconnect" = "Reconnecting to another random node…";
-"max_privacy_title" = "Offline";
 "max" = "Max";
 "max_privacy_request_title" = "Request Offline transaction";
 "max_privacy_request_text" = "The receiver pays fees.";
@@ -579,7 +579,7 @@ and never kept on the blockchain.";
 "for_pool" = "For exchange or mining pool";
 "for_pool_permanent" = "Exchanges or mining pools support only permanent address now.";
 "for_pool_regular" = "Exchanges or mining pools support only regular transaction now.";
-"receive_notice_max_privacy" = "To spend the received coins the min transaction fee will be ~0.01 BEAM.";
+"receive_notice_max_privacy" = "Min transaction fee to send Max privacy coins is ~0.01 BEAM.";
 "switch_to_permanent" = "Switch to permanent";
 "switch_to_regular" = "Switch to regular";
 "one_time_expire_text" = "One-time use address (expire in 12 hours after succesfull transaction).";
@@ -593,10 +593,26 @@ and never kept on the blockchain.";
 "sbbs_address" = "SBBS Address";
 "shielded_pool" = "Shielded pool";
 "maturity" = "Maturity";
-"connect_node_offline" = "Connect to integrated or own node to enable sending offline transactions";
+"connect_node_offline" = "Connect to integrated or own node to enable receiving max privacy transactions";
+"connect_node_offline_public" = "Connect to integrated or own node to enable receiving public offline transactions";
 "shielded" = "Shielded";
 "public_offline_address_info" = "Publishing this address will allow you to be identified";
 "offline_address" = "Offline address";
 "show_public_offline" = "Show public offline address";
 "public" = "public";
 "max_privacy" = "Max Privacy";
+"public_offline" = "Public offline";
+"sender_identity" = "Sender identity";
+"receiver_identity" = "Receiver identity";
+"tr_sent_public_offline" = "Transaction sent to public offline";
+"tr_sent_offline" = "Transaction sent to offline";
+"tr_received_public_offline" = "Transaction received from public offline";
+"tr_received_offline" = "Transaction received from offline";
+"support_10_payments" = "Supports 10 payments.";
+"max_privacy_address" = "Max Privacy Address";
+"payments" = "Payments";
+"more_details" = "More details";
+"public_offline_address" = "Public offline address";
+"payments_left" = "Payments left";
+"send_address_placholder" = "Paste address or search by address, tag or name";
+"local_comment" = "Comments are local and won't be shared";
