--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -210,7 +210,7 @@ and never kept on the blockchain.";
 "send" = "Send";
 "paste_enter_address" = "Paste address or choose contact";
 "incorrect_address" = "Incorrect address";
-"request_amount" = "Amount (optional)";
+"request_amount" = "REQUESTED AMOUNT (optional)";
 "address_is_expired" = "Can't send to the expired address";
 "groth" = " GROTH";
 "ownerkey_faceid_confirm" = "Please use Face ID to finish verification";
@@ -575,25 +575,25 @@ and never kept on the blockchain.";
 "Address_expiration" = "Address expiration";
 "online_token" = "Online address";
 "offline_token" = "Offline address";
-"for_wallet" = "For wallets";
+"for_wallets" = "For wallets";
+"for_wallet" = "For wallet";
 "for_pool" = "For exchange or mining pool";
 "for_pool_permanent" = "Exchanges or mining pools support only permanent address now.";
 "for_pool_regular" = "Exchanges or mining pools support only regular transaction now.";
-"receive_notice_max_privacy" = "Min transaction fee to send Max privacy coins is ~0.01 BEAM.";
+"receive_notice_max_privacy" = "Max Privacy transaction can last at most 72 hours.\n\nMin transaction fee to send Max privacy coins is ~0.01 BEAM.";
 "switch_to_permanent" = "Switch to permanent";
 "switch_to_regular" = "Switch to regular";
 "one_time_expire_text" = "One-time use address (expire in 12 hours after succesfull transaction).";
 "address_not_supported_max_privacy" = "This type of address does not support offline transactions";
 "offline_transactions" = "Offline transactions remaining";
 "transactions_remaining" = "Transactions remaining";
-"cant_sent_max_to_my_address" = "Can not sent Offline transaction to own address";
 "withdraw" = "Withdraw";
 "withdraw_cofirm" = "Please confirm the withdrawal.\nStay online until funds arrive.\n\nTHE TRANSACTION WILL BE SENT WITHIN 5 MINUTES.";
 "confirm_2" = "Confirm";
 "sbbs_address" = "SBBS Address";
 "shielded_pool" = "Shielded pool";
 "maturity" = "Maturity";
-"connect_node_offline" = "Connect to integrated or own node to enable receiving max privacy transactions";
+"connect_node_offline" = "Connect to integrated or own node to enable receiving max privacy and offline transactions";
 "connect_node_offline_public" = "Connect to integrated or own node to enable receiving public offline transactions";
 "shielded" = "Shielded";
 "public_offline_address_info" = "Publishing this address will allow you to be identified";
@@ -609,11 +609,24 @@ and never kept on the blockchain.";
 "tr_received_public_offline" = "Transaction received from public offline";
 "tr_received_offline" = "Transaction received from offline";
 "support_10_payments" = "Supports 10 payments.";
-"max_privacy_address" = "Max Privacy Address";
+"max_privacy_address" = "Max privacy address";
 "payments" = "Payments";
 "more_details" = "More details";
 "public_offline_address" = "Public offline address";
 "payments_left" = "Payments left";
 "send_address_placholder" = "Paste address or search by address, tag or name";
 "local_comment" = "Comments are local and won't be shared";
-"choose_currency" = "Choose crrency";
+"choose_currency" = "Choose currency";
+"max_privacy_lock_time" = "Max privacy lock time limit";
+"lock_time_limit" = "Lock time limit";
+"no_limit" = "No limit";
+"h24" = "24 hours";
+"h36" = "36 hours";
+"h48" = "48 hours";
+"h60" = "60 hours";
+"h72" = "72 hours";
+"last_unlock_time" = "Latest unlocked time";
+"sync_with_node" = "Synchronizing with node";
+"cant_send_to_max_privacy" = "Can't send to the Max privacy address again. No voucher, no address to receive it.";
+
+
