--- a/Resources/cs.lproj/Localizable.strings
+++ b/Resources/cs.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "restore_wallet_info" = "Pokoušíte se obnovit již existující Beam peněženku. Vezměte prosím na vědomí, že pokud používáte peněženku na jiném zařízení, Váš zůstatek bude aktuální, ale historie transakcí a adresy budou uchovávány na každém zařízení zvlášť.";
 "no_space_title" = "Nedostatek místa";
 "no_space_info" = "Pro obnovení peněženky je potřeba nejméně 200 MB volného místa v zařízení";
-"beam_title" = "Anonymní škálovatelná kryptoměna";
+"beam_title" = "Soukromé, rychlé, snadno použitelné";
 "create_new_wallet" = "Vytvořit novou peněženku";
 "enter_password_title" = "Zadejte své heslo pro přístup k peněžence";
 "empty_password" = "Heslo nesmí být prázdné";
@@ -16,7 +16,7 @@
 "seed_prhase" = "Klíčová slova";
 "input_seed" = "Zadejte Vaše klíčová slova";
 "confirm_seed_text" = "Aby bylo zajištěno, že jsou klíčová slova zapsána správně, vyplňte prosím konkrétní slova níže";
-"display_seed" = "Vaše klíčová slova jsou přístupovým údajem ke všem prostředkům ve Vaší peněžence. Od této chvíle už nebudete moci vidět Vaše klíčová slova v nastavení. Vaše klíčová slova si vytiskněte nebo si zapište a uložte tak, aby byla v bezpečí nebo v uzamčeném trezoru. Bez Vašich klíčových slov nebudete moci obnovit peněženku a získat své peníze.";
+"display_seed" = "Vaše klíčová slova jsou přístupovým údajem ke všem prostředkům ve Vaší peněžence. Vaše klíčová slova si vytiskněte nebo si zapište a uložte tak, aby byla v bezpečí nebo v uzamčeném trezoru. Bez Vašich klíčových slov nebudete moci obnovit peněženku a získat své peníze.";
 "display_seed_old" = "Vaše klíčová slova jsou přístupovým údajem ke všem prostředkům ve Vaší peněžence. Vaše klíčová slova si vytiskněte nebo si zapište a uložte tak, aby byla v bezpečí nebo v uzamčeném trezoru. Bez Vašich klíčových slov nebudete moci obnovit peněženku a získat své peníze.";
 "intro_seed_main" = "Vytvořte novou peněženku generováním klíčových slov. Pokud ztratíte své zařízení, budete potřebovat Vaše klíčová slova pro obnovení Vašich financí. Nikdy neposílejte Vaše klíčová slova do správce klíčů nebo hesel. Nikdy jej neukládejte ve vašem místním souborovém systému ani v žádných vzdálených adresářích.";
 "intro_seed_1" = "Neumožněte nikomu dalšímu aby viděl Vaše klíčová slova";
@@ -51,7 +51,7 @@
 "no_internet" = "Bez připojení k Internetu";
 "wallet_not_created" = "Peněženka nebyla vytvořena";
 "wallet_not_opened" = "Peněženku nelze otevřít";
-"restor_wallet_warning" = "Obnovení peněženky může chvíli trvat. Počkejte prosím na dokončení synchronizace - nezavírejte ani neminimalizujte aplikaci.";
+"restor_wallet_warning" = "Obnovení peněženky může chvíli trvat.\n\nPočkejte prosím, než uzel bude plně synchronizován s blockchainem, nezavírejte ani neminimalizujte peněženku.";
 "restor_wallet_info" = "Bude obnoven pouze zůstatek peněženky (UTXO). Vaše informace o transakcích jsou vždy soukromé a nikdy nejsou uchovávány na blockchainu.";
 "receive" = "Přijmout";
 "send" = "Odeslat";
@@ -71,6 +71,7 @@
 "delete_transaction" = "Smazat transakci";
 "repeat_transaction" = "Opakovat transakci";
 "general_info" = "Hlavní informace o transakci";
+"transaction_info" = "Informace o transakci";
 "payment_proof" = "Doklad o platbě";
 "utxo_list" = "Seznam transakcí UTXO";
 "transaction_details" = "Podrobnosti transakce";
@@ -117,7 +118,7 @@
 "copy_address" = "Kopírovat adresu";
 "edit_address" = "Upravit adresu";
 "delete_address" = "Odstranit adresu";
-"delete_address_transaction" = "Odstranit adresu a související transakce";
+"delete_address_transaction" = "Odstranit adresy a související transakce";
 "delete_address_only" = "Odstranit pouze adresu";
 "delete_address_text" = "Opravdu chcete odstranit tuto adresu z Vaší peněženky?";
 "delete_contact_text" = "Jste si jisti, že chcete odstranit z Vaší peněženky tento kontakt?";
@@ -162,7 +163,7 @@
 "tg_bot_link" = "Pro propojení telegram bota otevřete peněženku";
 "share_qr_code" = "Sdílet QR kód";
 "qr_code" = "QR kód";
-"create_address" = "vytvořit adresu";
+"create_address" = "Vytvořit adresu";
 "new_address" = "Nová adresa";
 "new_category" = "Vytvořit štítek";
 "edit_category" = "Upravit štítek";
@@ -186,6 +187,7 @@
 "yes" = "Ano";
 "no" = "Ne";
 "address_deleted" = "Adresa odstraněna";
+"address_details" = "Detaily adresy";
 "contact_deleted" = "Kontakt byl smazán";
 "show_owner_key" = "Zobrazit privátní klíč";
 "ownerkey_touchid_text" = "Zadejte své heslo a použijte Touch ID\npro přístup k peněžence";
@@ -207,7 +209,7 @@
 "send" = "Odeslat";
 "paste_enter_address" = "Vložte adresu nebo vyberte kontakt";
 "incorrect_address" = "Nesprávná adresa";
-"request_amount" = "Požadovaná částka (volitelné)";
+"request_amount" = "REQUESTED AMOUNT (optional)";
 "address_is_expired" = "Nelze odeslat na adresu jejíž platnost vypršela";
 "groth" = "Groth";
 "ownerkey_faceid_confirm" = "K dokončení ověření použijte Face ID";
@@ -217,7 +219,7 @@
 "send_to" = "Odeslat do";
 "amount_to_send" = "Částka k odeslání";
 "total_utxo" = "Celková hodnota UTXO";
-"send_notice" = "Pro dokončení transakce musí být příjemce online během následujících 12 hodin a měli byste být online do 2 hodin poté";
+"send_notice" = "Pro dokončení transakce musí být příjemce online během následujících 12 hodin a měli byste být online do 12 hodin poté";
 "save_address_title" = "Uložit adresu";
 "save_contact_title" = "Uložit kontakt";
 "save_contact_text" = "Chcete uložit adresu příjemce pro další transakce?";
@@ -250,7 +252,7 @@
 "tg_bot_connection" = "Připojování k Telegram botovi";
 "transaction_search" = "Vyhledávání transakcí";
 "search" = "Hledat";
-"autogenerated" = "automaticky generováno";
+"autogenerated" = "automaticky vytvořeno";
 "click_receive_beam" = "Klikněte pro příjem";
 "save_edit_address_text" = "Chcete uložit změny v této adrese?";
 "receive_notice" = "Pro dokončení transakce byste měli být online během 12 hodin po odeslání.";
@@ -266,7 +268,7 @@
 "refund_address" = "adresa vrácení peněz";
 "min_amount" = "Minimální částka je";
 "beam_to_receive" = "mincí Beam bude přijmuto";
-"beam_recepient_auto" = "Adresa příjemce mincí Beam (automaticky vytvořena)";
+"beam_recepient_auto" = "Adresa příjemce Beam mincí (automaticky vytvořena)";
 "beam_recepient" = "Adresa příjemce mincí Beam";
 "start_transaction" = "Zahájit transakci";
 "star_transaction_notice" = "Kliknutím na tlačítko \"Zahájit transakci\" souhlasíte s Podmínkami používání fy CryptoWolf";
@@ -314,7 +316,7 @@
 "id" = "ID";
 "date_time" = "Datum | čas";
 "utxo_history" = "UTXO historie";
-"delete_all_text" = "Are you sure you want to delete all (str) from your device?";
+"delete_all_text" = "Opravdu chcete odstranit všechny (str) z vašeho zařízení?";
 "delete_category_text" = "Jste si jisti, že chcete odstranit štítek „(str)“?";
 "canot_connect_node" = "Nelze se připojit k uzlu";
 "buy_beam_value" = "Odeslat (hodnota) na výše uvedenou adresu pro dokončení transakce"; // example Send 1 BTC to the above BITCOIN address to complete the transaction
@@ -385,14 +387,13 @@
 "utxo_empty_progress" = "Nemáte žádné aktivní UTXO";
 "transactions_empty" = "Váš seznam transakcí je prázdný";
 "transactions_empty_progress" = "Nemáte žádné aktivní transakce";
-"automatic_restore_title" = "Doporučena obnova";
-"automatic_restore_text" = "Beam Wallet stáhne snímek blockchainu a obnoví vaše prostředky v zařízení";
-"manual_restore_title" = "Obnovit pomocí důvěryhodného uzlu";
-"manual_restore_text" = "Peněženka Beam se připojí ke specifickému důvěryhodnému přístupovému bodu Node (nakonfigurovanému vaším privátním klíčem) a přístupový bod obnoví vaše prostředky";
-"paste_owner_key" = "Pro obnovení z uzlu vložte tento kód do peněženky Beam ve Vašem stolním počítači..";
-"after_paste_owner_key" = "Jakmile vložíte kód, spusťte Váš přístupový bod Node na počítači a klikněte na Další v mobilní aplikaci.";
-"enter_trusted_node" = "Zadejte adresu důvěryhodného uzlu";
-"trusted_node_error" = "Přístupový bod Node není připojen. Zkuste připojit peněženku k jinému přístupovému bodu nebo použijte doporučené obnovení.";
+"automatic_restore_title" = "AUTOMATICKÉ OBNOVENÍ (doporučeno)";
+"automatic_restore_text" = "Peněženka Beam stáhne kopii blockchainu a obnoví na zařízení vaše prostředky.";
+"manual_restore_title" = "OBNOVIT Z VLASTNÍHO UZLU NODE (pokročilé)";
+"manual_restore_text" = "Peněženka Beam se připojí k vašemu důvěryhodnému uzlu a obnoví vaše finanční prostředky. Uzel musí být nakonfigurován pomocí vašeho vlastnického klíče.";
+"paste_owner_key" = "Nakonfigurujte Vaši peněženku vlastnickým klíčem, spusťte uzel, aby se plně synchronizoval s blockchainem a klikněte na další.";
+"enter_trusted_node" = "Zadejte IP adresu a port vám důvěryhodného uzlu node";
+"trusted_node_error" = "Nelze se připojit k uzlu. Zkuste jinou adresu uzlu nebo použijte automatické obnovení.";
 "owner_key" = "Privátní klíč";
 "new_transaction" = "Příchozí transakce";
 "click_to_receive" = "Klikněte pro příjem";
@@ -408,11 +409,12 @@
 "in_24_hours_now" = "Za 24 hodin";
 "transaction_history" = "Historie transakcí";
 "min_fee_error" = "Minimální poplatek je (hodnota) Groth"; // The minimum fee is 100 GROTH
+"min_fee_error_offline" = "Mince byly automaticky vybrán pro maximalizaci soukromí a minimálního transakčního poplatku ve výši 1,000,100 GROTH.";
 "date" = "Datum";
 "downloading_blockchain" = "Stahování informací o blockchainu";
 "and" = "a"; // example: addresses and contacts
-"auto_restore_warning" = "Ujistěte se, že jste za poslední hodinu neprovedli žádné transakce (z jakéhokoliv zařízení). Pokud jste tak učinili, počkejte prosím alespoň jednu hodinu po poslední transakci, než budete pokračovat s obnovením. V opačném případě může být váš obnovený zůstatek nesprávný a bude vyžadován další postup pro obnovení.";
-"manual_restore_warning" = "Ověřte, zda je váš přístupový bod Node plně synchronizován s blockchainem před zahájením procesu obnovy. V opačném případě může být váš obnovený zůstatek nesprávný a bude vyžadován další postup pro obnovení.";
+"auto_restore_warning" = "Ujistěte se, že jste za poslední hodinu neprovedli žádné transakce z jakékoli peněženky se stejnými klíčovými seed frázemi.\n\nPokud jste to udělali, počkejte prosím alespoň jednu hodinu po dokončení poslední transakce před zvovuobnovením peněženky.\n\nV opačném případě může být váš obnovený zůstatek nesprávný a bude vyžadován další postup obnovy.";
+"manual_restore_warning" = "Ověřte, zda je váš vlastní uzel node plně synchronizován s blockchainem před zahájením procesu obnovení.\n\nV opačném případě může být váš obnovený zůstatek nesprávný a bude vyžadován další postup obnovení.";
 "understand" = "Rozumím";
 "NSPhotoLibraryAddUsageDescription" = "Uložit podrobnosti transakce a naskenovat QR kódy ze snímků";
 "NSPhotoLibraryUsageDescription" = "Poskytnout přístup k galerii pro výběr QR kódu";
@@ -496,7 +498,130 @@
 "import" = "Importovat";
 "export_data" = "Exportovat data";
 "till_block" = "do výšky bloku";
-"since" = "since"; // example since 1024 block height
-"block_height" = "block height";
-"dark_mode" = "Dark mode";
-"delete_all_tags" = "Delete all tags";
+"since" = "od"; // example since 1024 block height
+"block_height" = "velikost bloku";
+"dark_mode" = "Tmavý režim";
+"delete_all_tags" = "Smazat všechny štítky";
+"faucet_address_alert" = "Vaše adresa bude automaticky vyplněna na webové stránce";
+"seed_verification" = "Potvrzení platnosti klíčových slov";
+"complete_seed_verification" = "Ověřit klíčová slova";
+"faucet_redirect_text" = "Přesměrování na webovou stránku faucetu.\nVaše adresa bude vyplněna automaticky.";
+"clear_wallet_transactions_text" = "Nelze odstranit peněženku s aktivními transakcemi";
+"show_amounts_in" = "Zobrazit částky v";
+"second_currency" = "Sekundární měna";
+"notifications" = "Upozornění";
+"news" = "Novinky";
+"address_expiration" = "Platnost adresy končí";
+"transaction_status" = "Stav transakce";
+"wallet_updates" = "Aktualizace peněženky";
+"new_notifications_title" = "Máte nová oznámení";
+"new_notifications_text" = "Prosím klikněte pro načtení detailů";
+"transaction" = "Transakce";
+"transaction_received_notif_body" = "Obdrželi jste (hodnota) od (adresy)";
+"transaction_receiving_notif_body" = "Právě přijímáte (hodnota) z (adresy)";
+"transaction_sent_notif_body" = "Odeslali jste (hodnota) na (adresu)";
+"address_expired_notif" = "1 adresa vypršela";
+"addresses_expired_notif" = "(počet) adresy vypršely";
+"clear_all" = "Vymazat vše";
+"address_expired" = "Platnost adresy vypršela";
+"transaction_received" = "Transakce přijata";
+"transaction_received_notif_body_failed" = "Příjem (hodnota) z (adresy) selhalo";
+"transaction_sent_notif_body_failed" = "Odeslání (hodnota) na (adresu) selhalo";
+"transaction_sent" = "Transakce byla odeslána";
+"read" = "Číst";
+"no_notifications" = "Zatím nejsou žádná potvrzení.";
+"new_version_available_title" = "Je dostupná nová verze (verze)";
+"new_version_available_detail" = "Vaše aktuální verze je (verze)\nProsím aktualizujte a získejte co nejvíce vaší peněženky Beam.";
+"new_version_available_notif_title" = "Je dostupná nová verze";
+"new_version_available_notif_detail" = "Prosím aktualizujte a získejte co nejvíce vaší peněženky Beam.";
+"notification" = "Oznámení";
+"update_now" = "Aktualizovat nyní";
+"off" = "Vypnout";
+"unlink" = "Odpojit";
+"available_unlink" = "Lze odpojit";
+"unlinking_fee" = "Poplatek za odpojení";
+"small_amount_unlink" = "Částka je příliš malá. Minimální částka je";
+"remaining" = "Zbývající";
+"amount_to_unlink" = "Částka k odpojení";
+"unlink_notice" = "Vezměte prosím na vědomí, že uvolnění prostředků může trvat až několik dní.";
+"change" = "Změnit";
+"unlinked" = "Odpojeno";
+"unlink_beam" = "Odpojit BEAM";
+"change_locked" = "ZMĚNIT\n(uzamčeno do doby, než transakce uspěje nebo vyprší)";
+"unlinked_funds_only" = "Pouze nepropojené fondy";
+"add_all_unlinked" = "Přidat všechny nepropojené";
+"wallet_id" = "Identita";
+"show_token" = "Zobrazit adresu";
+"transaction_token" = "Adresa transakce";
+"general" = "Obecné";
+"one_time" = "Jednorázově";
+"permanent" = "Trvalé";
+"edit_token" = "Upravit adresu";
+"receive_from" = "Přijímat od";
+"pool" = "Pro směnárnu nebo těžební pool";
+"reconnect" = "Znovu připojit k jinému náhodnému uzlu…";
+"max" = "Max";
+"max_privacy_request_title" = "Žádost o offline transakci";
+"max_privacy_request_text" = "Poplatky platí příjemce.";
+"offline_transaction" = "Offline transakce";
+"transaction_type" = "Druh transakce";
+"type" = "Typ";
+"perm_out_address_title" = "Trvalá odchozí adresa";
+"perm_out_address_text" = "Tato adresa bude použita pro odesílání na konkrétní adresu příjemce.";
+"perm_token" = "Trvalá adresa.";
+"address_type" = "Typ adresy";
+"identity" = "Identita";
+"Address_expiration" = "Platnost adresy končí";
+"online_token" = "Online adresa";
+"offline_token" = "Offline adresa";
+"for_wallets" = "Pro peněženky";
+"for_wallet" = "Pro peněženku";
+"for_pool" = "Pro směnárnu nebo těžební pool";
+"for_pool_permanent" = "Směnárny nebo těžební pooly nyní podporují pouze trvalou adresu.";
+"for_pool_regular" = "Směnárny nebo těžební pooly nyní podporují pouze běžnou transakci.";
+"receive_notice_max_privacy" = "Max Privacy transaction can last at most 72 hours.\n\nMin transaction fee to send Max privacy coins is ~0.01 BEAM.";
+"switch_to_permanent" = "Přepnout na trvalou";
+"switch_to_regular" = "Přepnout na obvyklou";
+"one_time_expire_text" = "Adresa pro jednorázové použití (vyprší za 12 hodin po úspěšné transakci).";
+"address_not_supported_max_privacy" = "Tento typ adresy nepodporuje offline transakce";
+"offline_transactions" = "Zbývá offline transakcí";
+"transactions_remaining" = "Zbývající transakce";
+"withdraw" = "Vybrat";
+"withdraw_cofirm" = "Potvrďte, prosím, výběr.\nZůstaňte online, dokud nedorazí peníze.\n\nTRANSAKCE BUDOU ODESLÁNY BĚHEM 5 MINUT.";
+"confirm_2" = "Potvrdit";
+"sbbs_address" = "SBBS adresa";
+"shielded_pool" = "Chráněný pool";
+"maturity" = "Dokončeno";
+"connect_node_offline" = "Připojte se k integrovanému nebo vlastnímu uzlu a povolte přijímání maximálně soukromých a offline transakcí";
+"connect_node_offline_public" = "Připojte se k integrovanému nebo vlastnímu uzlu pro umožnění příjmu veřejných offline plateb";
+"shielded" = "Chráněné";
+"public_offline_address_info" = "Publikování této adresy vás umožní identifikovat";
+"offline_address" = "Offline adresa";
+"show_public_offline" = "Zobrazit veřejnou offline adresu";
+"public" = "veřejný";
+"max_privacy" = "maximální ochrana soukromí";
+"public_offline" = "Veřejná offline";
+"sender_identity" = "Identita odesílatele";
+"receiver_identity" = "Identita příjemce";
+"tr_sent_public_offline" = "Transakce odeslána do veřejné sítě offline";
+"tr_sent_offline" = "Transakce odeslána do offline";
+"tr_received_public_offline" = "Transakce přijatá od veřejné offline";
+"tr_received_offline" = "Transakce přijatá od offline";
+"support_10_payments" = "Podporuje 10 plateb.";
+"max_privacy_address" = "Adresa max soukromí";
+"payments" = "Platby";
+"more_details" = "Další podrobnosti";
+"public_offline_address" = "Veřejná offline adresa";
+"payments_left" = "Zbývající platby";
+"send_address_placholder" = "Vložit adresu nebo vyhledat podle adresy, štítku nebo jména";
+"local_comment" = "Komentáře jsou místní a nebudou sdíleny";
+"choose_currency" = "Zvolte měnu";
+"max_privacy_lock_time" = "Časový limit uzamčeného max soukromí";
+"lock_time_limit" = "Časový limit úschovy";
+"no_limit" = "Bez omezení";
+"h24" = "24 hodin";
+"h36" = "36 hodin";
+"h48" = "48 hodin";
+"h60" = "60 hodin";
+"h72" = "72 hodin";
+"last_unlock_time" = "Zbývají čas do uzamčení";
