--- a/Resources/nl.lproj/Localizable.strings
+++ b/Resources/nl.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "restore_wallet_info" = "U probeert een bestaande Beam wallet te herstellen. Let op dat wanneer u uw portemonnee op een ander apparaat gebruikt, uw saldo up to date zal zijn, maar de transactiegeschiedenis en adressen op ieder apparaat apart worden gehouden.";
 "no_space_title" = "Onvoldoende opslagruimte";
 "no_space_info" = "Ten minste 200MB vrije ruimte op het apparaat is vereist om de wallet te herstellen";
-"beam_title" = "Schaalbare vertrouwelijke cryptovaluta";
+"beam_title" = "Vertrouwelijk, snel, eenvoudig te gebruiken";
 "create_new_wallet" = "Nieuwe wallet aanmaken";
 "enter_password_title" = "Voer uw wachtwoord in om toegang te krijgen tot de wallet";
 "empty_password" = "Wachtwoord kan niet leeg zijn";
@@ -16,7 +16,7 @@
 "seed_prhase" = "Herstelzin";
 "input_seed" = "Typ uw herstelzin in";
 "confirm_seed_text" = "Om er zeker van te zijn dat de herstelzin correct is opgeschreven vult u de specifieke woorden hieronder in";
-"display_seed" = "Uw herstelzin is de toegangssleutel tot alle tegoeden in uw wallet. Vanaf nu is het niet mogelijk uw herstelzin in de instellingen te laten weergeven. Print de zin uit of schrijf deze op en bewaar de zin op een veilige plaats. Zonder de zin kunt u uw tegoeden niet herstellen.";
+"display_seed" = "Uw herstelzin is de toegangssleutel tot alle tegoeden in uw wallet. Na een succesvolle verificatie kunt u uw herstelzin niet meer zien in de instellingen. Druk de zin af of schrijf deze op en bewaar de zin op een veilige plek. Zonder de herstelzin kunt u uw tegoeden niet opnieuw herstellen.";
 "display_seed_old" = "Uw herstelzin is de toegangssleutel tot alle tegoeden in uw portemonnee. Print de zin uit of schrijf deze op en bewaar de zin op een veilige plaats zoals in een kluis. Zonder de zin kunt u uw portemonnee, en dus uw tegoeden, niet herstellen.";
 "intro_seed_main" = "Maak een nieuwe wallet door een herstelzin te genereren. Als u uw apparaat verliest heeft u de herstelzin nodig om uw tegoeden te herstellen. Voer uw herstelzin nooit op wachtwoordbeheerders of dergelijke applicaties in. Sla het nooit op in uw lokale bestandssysteem of externe mappen van welke aard dan ook.";
 "intro_seed_1" = "Laat niemand uw herstelzin zien";
@@ -51,8 +51,8 @@
 "no_internet" = "Geen internetverbinding";
 "wallet_not_created" = "Wallet niet aangemaakt";
 "wallet_not_opened" = "Wallet kan niet worden geopend";
-"restor_wallet_warning" = "Het herstellen van uw wallet kan enige tijd duren. Wacht tot de synchronisatie is voltooid - sluit of minimaliseer de applicatie niet.";
-"restor_wallet_info" = "Alleen het saldo van uw wallet (UTXO's) zal worden hersteld. Uw transactie informatie is altijd privé en wordt nooit in de blockchain opgeslagen.";
+"restor_wallet_warning" = "Het herstellen van de wallet kan even duren.\n\nWacht tot de node volledig is gesynchroniseerd met de blockchain, sluit of minimaliseer de wallet app niet.";
+"restor_wallet_info" = "Alleen het wallet saldo (UTXO) kan worden hersteld. Transactieinformatie is altijd privé en wordt nooit in de blockchain opgeslagen.";
 "receive" = "Ontvang";
 "send" = "Verzend";
 "available" = "Beschikbaar";
@@ -71,6 +71,7 @@
 "delete_transaction" = "Transactie verwijderen";
 "repeat_transaction" = "Transactie herhalen";
 "general_info" = "Algemene transactieinformatie";
+"transaction_info" = "Transactie informatie";
 "payment_proof" = "Betalingsbewijs";
 "utxo_list" = "Transactie UTXO lijst";
 "transaction_details" = "Transactiegegevens";
@@ -117,7 +118,7 @@
 "copy_address" = "Kopieer adres";
 "edit_address" = "Adres bewerken";
 "delete_address" = "Adres verwijderen";
-"delete_address_transaction" = "Verwijder adres en gerelateerde transacties";
+"delete_address_transaction" = "Verwijder adressen en gerelateerde transacties";
 "delete_address_only" = "Verwijder alleen adres";
 "delete_address_text" = "Weet u zeker dat u dit adres uit uw portemonnee wilt verwijderen?";
 "delete_contact_text" = "Weet u zeker dat u dit contact uit uw portemonnee wilt verwijderen?";
@@ -162,7 +163,7 @@
 "tg_bot_link" = "Open wallet om telegram bot te koppelen";
 "share_qr_code" = "Deel QR code";
 "qr_code" = "QR code";
-"create_address" = "adres aanmaken";
+"create_address" = "Adres aanmaken";
 "new_address" = "Nieuw adres";
 "new_category" = "Label maken";
 "edit_category" = "Label bewerken";
@@ -186,6 +187,7 @@
 "yes" = "Ja";
 "no" = "Nee";
 "address_deleted" = "Adres verwijderd";
+"address_details" = "Adresgegevens";
 "contact_deleted" = "Contactpersoon verwijderd";
 "show_owner_key" = "Toon eigenaarssleutel";
 "ownerkey_touchid_text" = "Voer uw wachtwoord in en gebruik Touch ID om toegang te krijgen tot de wallet";
@@ -207,7 +209,7 @@
 "send" = "Verzend";
 "paste_enter_address" = "Plak adres of kies contact";
 "incorrect_address" = "Onjuist adres";
-"request_amount" = "Vraag bedrag op (optioneel)";
+"request_amount" = "REQUESTED AMOUNT (optional)";
 "address_is_expired" = "Kan niet naar het verlopen adres verzenden";
 "groth" = " GROTH";
 "ownerkey_faceid_confirm" = "Gebruik Face ID om de verificatie af te ronden";
@@ -230,7 +232,7 @@
 "copy_contact" = "Contactpersoon kopiëren";
 "delete_contact_transaction" = "Contactpersoon en gerelateerde transacties verwijderen";
 "delete_contact_only" = "Alleen contactpersoon verwijderen";
-"outgoing" = "Uitgaande adres (automatisch gegenereerd)";
+"outgoing" = "Uitgaand adres (automatisch gegenereerd)";
 "outgoing_address" = "Uitgaande adres";
 "your_password" = "Uw wachtwoord";
 "node" = "Node";
@@ -250,7 +252,7 @@
 "tg_bot_connection" = "Verbinden met de telegram bot";
 "transaction_search" = "Transactie zoeken";
 "search" = "Zoeken";
-"autogenerated" = "Automatisch gegenereerd";
+"autogenerated" = "automatisch gegenereerd";
 "click_receive_beam" = "Klik om Beam te ontvangen";
 "save_edit_address_text" = "Wilt u de wijzigingen aan dit adres opslaan?";
 "receive_notice" = "Om de transactie te voltooien moet u binnen 12 uur nadat de Beam's zijn verzonden online zijn.";
@@ -314,7 +316,7 @@
 "id" = "ID";
 "date_time" = "Datum | tijd";
 "utxo_history" = "UTXO geschiedenis";
-"delete_all_text" = "Are you sure you want to delete all (str) from your device?";
+"delete_all_text" = "Weet u zeker dat u alle (str) van uw apparaat wilt verwijderen?";
 "delete_category_text" = "Weet u zeker dat u label “(str)” wilt verwijderen?";
 "canot_connect_node" = "Kan geen verbinding maken met node";
 "buy_beam_value" = "Verzend (waarde) naar bovenstaand (naam) adres om de transactie te voltooien"; // example Send 1 BTC to the above BITCOIN address to complete the transaction
@@ -385,14 +387,13 @@
 "utxo_empty_progress" = "U heeft geen actieve UTXO";
 "transactions_empty" = "Uw transactielijst is leeg";
 "transactions_empty_progress" = "U heeft geen actieve transacties";
-"automatic_restore_title" = "Aanbevolen herstel";
-"automatic_restore_text" = "Beam Wallet zal een snapshot van de blockchain downloaden en uw saldo op het apparaat herstellen";
-"manual_restore_title" = "Herstellen met vertrouwde node";
-"manual_restore_text" = "Beam Wallet zal verbinding maken met specifieke vertrouwde node (geconfigureerd met uw eigenaarssleutel) en de node zal uw saldo herstellen";
-"paste_owner_key" = "Plak deze code in uw desktopversie van de Beam Wallet om verder te gaan met herstellen vanaf de node.";
-"after_paste_owner_key" = "Zodra u de code heeft geplakt start u uw desktopnode en klikt u op volgende op de mobiele applicatie.";
-"enter_trusted_node" = "Voer vertrouwd node adres in";
-"trusted_node_error" = "Node is niet verbonden. Probeer wallet te verbinden met een andere node of gebruik aanbevolen herstel.";
+"automatic_restore_title" = "AUTOMATISCH HERSTEL (aanbevolen)";
+"automatic_restore_text" = "Beam Wallet zal een snapshot van de blockchain downloaden en uw saldo op het apparaat herstellen.";
+"manual_restore_title" = "HERSTEL MET EIGEN NODE (geavanceerd)";
+"manual_restore_text" = "Beam Wallet zal verbinding maken met uw vertrouwde node en zal uw saldo herstellen. De node moet worden geconfigureerd met uw eigenaarssleutel.";
+"paste_owner_key" = "Configureer uw wallet met uw eigenaarssleutel, start de node om volledig te synchroniseren met de blockchain en klik op volgende.";
+"enter_trusted_node" = "Voer uw vertrouwde node IP adres en poort in";
+"trusted_node_error" = "Kan geen verbinding maken met de node. Probeer een ander node adres of gebruik een automatisch herstel.";
 "owner_key" = "Eigenaarssleutel";
 "new_transaction" = "Inkomende transactie";
 "click_to_receive" = "Klik om Beam te ontvangen";
@@ -408,11 +409,12 @@
 "in_24_hours_now" = "Binnen 24 uur vanaf nu";
 "transaction_history" = "Transactie geschiedenis";
 "min_fee_error" = "De minimum vergoeding is (waarde) GROTH"; // The minimum fee is 100 GROTH
+"min_fee_error_offline" = "Coins zijn automatisch geselecteerd om de privacy en minimale transactiekosten van 1,000,100 GROTH te maximaliseren.";
 "date" = "Datum";
 "downloading_blockchain" = "Blockhain informatie aan het downloaden";
 "and" = "en"; // example: addresses and contacts
-"auto_restore_warning" = "Wees er zeker van dat u geen transacties (vanaf elk apparaat) heeft gedaan in het afgelopen uur. Indien u dit wel heeft gedaan, wacht dan ten minste één uur na de laatste transactie voordat u verder gaat met herstellen. Doet u dit niet, dan kan uw herstelde saldo onjuist zijn en zal de extra herstelprocedure vereist zijn.";
-"manual_restore_warning" = "Controleer of uw node volledig is gesynchroniseerd met de blockchain voordat u de herstelprocedure begint. Doet u dit niet, dan kan uw herstelde saldo onjuist zijn en zal de extra herstelprocedure vereist zijn.";
+"auto_restore_warning" = "Zorg ervoor dat u het afgelopen uur geen transacties heeft gedaan vanuit een wallet met dezelfde herstelzin.\n\nAls dit het geval is wacht dan minstens een uur nadat de laatste transactie is voltooid voordat u de wallet herstelt.\n\nAnders is uw herstelde saldo mogelijk onjuist en is een aanvullende herstelprocedure vereist.";
+"manual_restore_warning" = "Controleer of uw eigen node volledig is gesynchroniseerd met de blockchain voordat u de herstelprocedure start.\n\nAnders is uw herstelde saldo mogelijk onjuist en is een aanvullende herstelprocedure vereist.";
 "understand" = "Ik begrijp het";
 "NSPhotoLibraryAddUsageDescription" = "Sla transactie details op en scan QR codes vanuit foto's";
 "NSPhotoLibraryUsageDescription" = "Geef toegang tot fotogalerij om QR code te selecteren";
@@ -448,11 +450,7 @@
 "enter_your_password" = "Voer uw wachtwoord in";
 "share_details" = "Details delen";
 "faucet_title" = "Begin met het gebruik van uw wallet";
-<<<<<<< HEAD
-"faucet_text" = "Wilt u de wallet in actie zien? Ontvang een heel kleine hoeveelheid Beam's van de community faucet.";
-=======
 "faucet_text" = "De wallet in gebruik zien. Ontvang een heel klein aantal Beam's van de community faucet.";
-
 "faucet_ok" = "Ja, graag";
 "faucet_no" = "Nee, dank u";
 "show_seed_phrase" = "Herstelzin weergeven";
@@ -461,11 +459,7 @@
 "all_set" = "U bent helemaal klaar";
 "wallet_is_secure" = "Uw wallet is nu veilig! Doe voorzichtig met het gebruik ervan.";
 "make_wallet_secure_title" = "Maak uw wallet veilig";
-<<<<<<< HEAD
-"make_wallet_secure_text" = "Versterk de beveiliging van de wallet door het opslaan van uw herstelzin zodat u uw saldo niet verliest.";
-=======
 "make_wallet_secure_text" = "Schrijf uw herstelzin op en valideer deze zodat u uw saldo altijd kunt herstellen.";
-
 "complete_verification" = "Verificatie voltooien";
 "yes_please" = "ja, graag";
 "i_will_later" = "ik zal het later doen";
@@ -493,7 +487,6 @@
 "paste" = "Plakken";
 "status" = "Status"; // transaction status
 "remove_wallet" = "Wallet verwijderen";
-
 "export_wallet_data" = "Exporteer wallet data";
 "import_wallet_data" = "Importeer wallet data";
 "utilities" = "Utilities";
@@ -505,8 +498,130 @@
 "import" = "Importeren";
 "export_data" = "Exporteer data";
 "till_block" = "tot block height";
-"since" = "since"; // example since 1024 block height
+"since" = "sinds"; // example since 1024 block height
 "block_height" = "block height";
-"dark_mode" = "Dark mode";
-"delete_all_tags" = "Delete all tags";
-
+"dark_mode" = "Donkere modus";
+"delete_all_tags" = "Alle labels verwijderen";
+"faucet_address_alert" = "Uw adres wordt automatisch ingevuld op de faucet pagina";
+"seed_verification" = "Seed verificatie";
+"complete_seed_verification" = "Controleer de herstelzin";
+"faucet_redirect_text" = "Doorverwijzen naar de faucet website.\nUw adres wordt automatisch ingevuld.";
+"clear_wallet_transactions_text" = "Kan wallet met actieve transacties niet verwijderen";
+"show_amounts_in" = "Toon bedragen in";
+"second_currency" = "Secundaire valuta";
+"notifications" = "Meldingen";
+"news" = "Nieuws";
+"address_expiration" = "Adres vervalt";
+"transaction_status" = "Transactiestatus";
+"wallet_updates" = "Wallet updates";
+"new_notifications_title" = "U heeft nieuwe notificaties";
+"new_notifications_text" = "Klik om details te bekijken";
+"transaction" = "Transactie";
+"transaction_received_notif_body" = "U heeft (waarde) ontvangen van (adres)";
+"transaction_receiving_notif_body" = "U ontvangt (waarde) van (adres)";
+"transaction_sent_notif_body" = "U heeft (waarde) verzonden naar (adres)";
+"address_expired_notif" = "1 adres is verlopen";
+"addresses_expired_notif" = "(count) adressen verlopen";
+"clear_all" = "Alles wissen";
+"address_expired" = "Adres is verlopen";
+"transaction_received" = "Transactie ontvangen";
+"transaction_received_notif_body_failed" = "(waarde) ontvangen van (adres) is mislukt";
+"transaction_sent_notif_body_failed" = "Verzenden van (waarde) naar (adres) is mislukt";
+"transaction_sent" = "Transactie verzonden";
+"read" = "Lezen";
+"no_notifications" = "Er zijn nog geen meldingen.";
+"new_version_available_title" = "Nieuwe versie (versie) is beschikbaar";
+"new_version_available_detail" = "Uw huidige versie is (versie)\nWerk bij om het meeste uit uw Beam wallet te halen.";
+"new_version_available_notif_title" = "Nieuwe versie is beschikbaar";
+"new_version_available_notif_detail" = "Update alstublieft om het meeste uit uw Beam wallet te halen.";
+"notification" = "Notificatie";
+"update_now" = "Nu updaten";
+"off" = "Uit";
+"unlink" = "Ontkoppelen";
+"available_unlink" = "Beschikbaar om te ontkoppelen";
+"unlinking_fee" = "Ontkoppel kosten";
+"small_amount_unlink" = "Bedrag is te klein. Minimale hoeveelheid is";
+"remaining" = "Resterende";
+"amount_to_unlink" = "Bedrag om te ontkoppelen";
+"unlink_notice" = "Houd er rekening mee dat het ontkoppelen van bedragen enkele dagen kan duren.";
+"change" = "Wijzig";
+"unlinked" = "Ontkoppeld";
+"unlink_beam" = "BEAM ontkoppelen";
+"change_locked" = "WISSELGELD\n(is vergrendeld totdat de transactie slaagt of verloopt)";
+"unlinked_funds_only" = "Alleen niet gekoppeld geld";
+"add_all_unlinked" = "Voeg al het niet gekoppelde toe";
+"wallet_id" = "Identiteit";
+"show_token" = "Toon adres";
+"transaction_token" = "Transactieadres";
+"general" = "Algemeen";
+"one_time" = "Eenmalig";
+"permanent" = "Permanent";
+"edit_token" = "Adres bewerken";
+"receive_from" = "Ontvang van";
+"pool" = "Exchange of mining pool";
+"reconnect" = "Opnieuw verbinden met een andere willekeurige node…";
+"max" = "Max";
+"max_privacy_request_title" = "Offline transactie aanvragen";
+"max_privacy_request_text" = "De ontvanger betaalt kosten.";
+"offline_transaction" = "Offline transactie";
+"transaction_type" = "Transactietype";
+"type" = "Type";
+"perm_out_address_title" = "Permanent uitgaand adres";
+"perm_out_address_text" = "Dit adres wordt gebruikt voor verzending naar een specifiek ontvanger adres.";
+"perm_token" = "Permanent adres.";
+"address_type" = "Adrestype";
+"identity" = "Identiteit";
+"Address_expiration" = "Adres vervalt";
+"online_token" = "Online adres";
+"offline_token" = "Offline adres";
+"for_wallets" = "Voor wallets";
+"for_wallet" = "Voor wallet";
+"for_pool" = "Voor exchange of mining pool";
+"for_pool_permanent" = "Exchanges of mining pools ondersteunen nu alleen een permanent adres.";
+"for_pool_regular" = "Exchanges of mining pools ondersteunen nu alleen een standaard transactie.";
+"receive_notice_max_privacy" = "Max Privacy transaction can last at most 72 hours.\n\nMin transaction fee to send Max privacy coins is ~0.01 BEAM.";
+"switch_to_permanent" = "Overschakelen naar permanent";
+"switch_to_regular" = "Overschakelen naar standaard";
+"one_time_expire_text" = "Adres voor eenmalig gebruik (vervalt 12 uur na succesvolle transactie).";
+"address_not_supported_max_privacy" = "Dit type adres ondersteunt geen offline transacties";
+"offline_transactions" = "Resterende offline transacties";
+"transactions_remaining" = "Resterende transacties";
+"withdraw" = "Opnemen";
+"withdraw_cofirm" = "Bevestig de opname.\nBlijf online totdat het geld binnenkomt.\n\nDE TRANSACTIE ZAL BINNEN 5 MINUTEN WORDEN VERZONDEN.";
+"confirm_2" = "Bevestigen";
+"sbbs_address" = "SBBS adres";
+"shielded_pool" = "Afgeschermde pool";
+"maturity" = "Volwassenheid";
+"connect_node_offline" = "Verbind met geïntegreerde of eigen node om maximale privacy en offline transacties te kunnen ontvangen";
+"connect_node_offline_public" = "Verbind met geïntegreerde of eigen node om ontvangen van openbare offline transacties in te schakelen";
+"shielded" = "Afgeschermd";
+"public_offline_address_info" = "Indien u dit adres publiceert kunt u worden geïdentificeerd";
+"offline_address" = "Offline adres";
+"show_public_offline" = "Toon openbaar offline adres";
+"public" = "openbaar";
+"max_privacy" = "Max Privacy";
+"public_offline" = "Openbaar offline";
+"sender_identity" = "Identiteit verzender";
+"receiver_identity" = "Identiteit ontvanger";
+"tr_sent_public_offline" = "Transactie verzonden naar openbaar offline";
+"tr_sent_offline" = "Transactie verzonden naar offline";
+"tr_received_public_offline" = "Transactie ontvangen van openbaar offline";
+"tr_received_offline" = "Transactie ontvangen van offline";
+"support_10_payments" = "Ondersteunt 10 betalingen.";
+"max_privacy_address" = "Max privacy adres";
+"payments" = "Betalingen";
+"more_details" = "Meer details";
+"public_offline_address" = "Openbaar offline adres";
+"payments_left" = "Resterende betalingen";
+"send_address_placholder" = "Plak adres of zoek op adres, tag of naam";
+"local_comment" = "Opmerkingen zijn lokaal en worden niet gedeeld";
+"choose_currency" = "Kies valuta";
+"max_privacy_lock_time" = "Tijdslimiet voor Max privacyvergrendeling";
+"lock_time_limit" = "Locktime limiet";
+"no_limit" = "Geen limiet";
+"h24" = "24 uur";
+"h36" = "36 uur";
+"h48" = "48 uur";
+"h60" = "60 uur";
+"h72" = "72 uur";
+"last_unlock_time" = "Laatste ontgrendelde tijd";
