--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -593,8 +593,8 @@ and never kept on the blockchain.";
 "sbbs_address" = "SBBS Address";
 "shielded_pool" = "Shielded pool";
 "maturity" = "Maturity";
-"connect_node_offline" = "Connect to integrated or own node to enable receiving max privacy and offline transactions";
-"connect_node_offline_public" = "Connect to integrated or own node to enable receiving public offline transactions";
+"connect_node_offline" = "Connect to own node or enable mobile node in the settings to enable receiving max privacy and offline transactions";
+"connect_node_offline_public" = "Connect to own node or enable mobile node in the settings to enable receiving public offline transactions";
 "shielded" = "Shielded";
 "public_offline_address_info" = "Publishing this address will allow you to be identified";
 "offline_address" = "Offline address";
@@ -630,3 +630,5 @@ and never kept on the blockchain.";
 "cant_send_to_max_privacy" = "Can't send to the Max privacy address again. No voucher, no address to receive it.";
 "rescan" = "Rescan";
 "rescan_text" = "Rescan will sync transaction and UTXO data with the latest information on the blockchain. The process might take long time.\nAre you sure?";
+"mobile_node_title" = "Mobile node";
+"mobile_node_text" = "Allows to validate and sync with the blockchain";
