new send screen - in progress

--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -379,6 +379,7 @@ and never kept on the blockchain.";
 "auth_touch_confirm" = "Confirm your fingerprint to authenticate";
 "auth_bio_failed" = "(Mechanism) has been locked out due to few fail attemp. Enter iPhone passcode to enable (Mechanism)."; //(Mechanism) is Face ID or Touch ID.
 "add_all" = "Add all";
+"add_max" = "Add max";
 "my_active_addresses" = "My active addresses";
 "tag" = "Tag";
 "contacts_empty" = "Your contacts list is empty";
@@ -550,8 +551,6 @@ and never kept on the blockchain.";
 "unlinked" = "Unlinked";
 "unlink_beam" = "Unlink BEAM";
 "change_locked" = "CHANGE\n(locked till the transaction will succeed or expire)";
-"unlinked_funds_only" = "Unlinked funds only";
-"add_all_unlinked" = "Add all unlinked";
 "wallet_id" = "Identity";
 "show_token" = "Show address";
 "transaction_token" = "Transaction address";
@@ -615,7 +614,7 @@ and never kept on the blockchain.";
 "more_details" = "More details";
 "public_offline_address" = "Public offline address";
 "payments_left" = "Payments left";
-"send_address_placholder" = "Paste address or search by address, tag or name";
+"send_address_placholder" = "Paste address or search by address, name";
 "local_comment" = "Comments are local and won't be shared";
 "choose_currency" = "Choose currency";
 "max_privacy_lock_time" = "Max privacy lock time limit";
