--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -580,7 +580,7 @@ and never kept on the blockchain.";
 "for_pool" = "For exchange or mining pool";
 "for_pool_permanent" = "Exchanges or mining pools support only permanent address now.";
 "for_pool_regular" = "Exchanges or mining pools support only regular transaction now.";
-"receive_notice_max_privacy" = "Max Privacy transaction can last up to 2 days.\n\nMin transaction fee to send Max privacy coins is 0.01 BEAM.";
+"receive_notice_max_privacy" = "Max Privacy transaction can last at most 72 hours.\n\nMin transaction fee to send Max privacy coins\nis 0.01 BEAM.";
 "switch_to_permanent" = "Switch to permanent";
 "switch_to_regular" = "Switch to regular";
 "one_time_expire_text" = "One-time use address (expire in 12 hours after succesfull transaction).";
@@ -614,7 +614,7 @@ and never kept on the blockchain.";
 "more_details" = "More details";
 "public_offline_address" = "Public offline address";
 "payments_left" = "Payments left";
-"send_address_placholder" = "Paste address or search by address, name";
+"send_address_placholder" = "Paste address or search by address or name";
 "local_comment" = "Comments are local and won't be shared";
 "choose_currency" = "Choose currency";
 "max_privacy_lock_time" = "Max privacy lock time limit";
@@ -635,7 +635,7 @@ and never kept on the blockchain.";
 "regular_address" = "Regular address";
 "receive_contact_placholder" = "Name the new address or search existing contact";
 "copy_and_close" = "Copy and close";
-"max_privacy_qr_hint" = "Max Privacy transaction can last up to 2 days.\n\nMin transaction fee to send Max privacy coins is 0.01 BEAM.";
+"max_privacy_qr_hint" = "Max Privacy transaction can last at most 72 hours.\n\nMin transaction fee to send Max privacy coins\nis 0.01 BEAM.";
 "search_or_paste" = "Search by name or paste address";
 "online_mobile_node" = "Online: mobile node";
 "online_own_node" = "Online: own node";
@@ -707,4 +707,12 @@ and never kept on the blockchain.";
 "syncing_with_blockchain" = "Syncing  with blockchain";
 "please_no_lock" = "Please do not lock your phone and do not close the wallet.";
 "wallet_connected_to_mobile_node" = "Wallet connected to Mobile node";
+"disconnect" = "Disconnect";
+"start_using_wallet" = "Start using your wallet";
+"enter_node_address" = "Please enter node address";
+"senf_offline_notice" = "Min transaction fee to send offline transaction\nis 0.01 BEAM.";
+"regular_online_only" = "Regular online-only address";
+"regular_offline_only" = "Regular offline-only address";
+"sender_choice" = "Sender will be given a choice between\nregular and offline payment.";
+
 
